--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -1,1 +1,73 @@
-/* No CSS *//*# sourceMappingURL=menuStyle.css.map */
+@font-face {
+  font-family: 'trajan-pro';
+  src: url(../Assets/fonts/Trajan-Pro-Regular.woff) format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'trajan-pro-bold';
+  src: url(../Assets/fonts/Trajan-Pro-Bold.woff) format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  font-family: 'trajan-pro';
+  background: #000;
+  padding: 0;
+  margin: 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+body {
+  cursor: url("../Assets/images/pngs/Cursor.png"), auto;
+}
+
+ul {
+  width: 100%;
+  text-align: center;
+  padding-top: 5em;
+}
+
+li {
+  font-family: 'trajan-pro-bold';
+  font-size: 2.4em;
+  color: #fff;
+  background: none;
+  list-style-type: none;
+  padding-top: 1em;
+  margin: auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.title-image {
+  display: block;
+  margin: auto;
+  width: 50%;
+}
+
+.raise-on-hover {
+  -webkit-transition: all .75s ease;
+  transition: all .75s ease;
+}
+
+.raise-on-hover:hover {
+  -webkit-transform: translateY(-0.2em);
+          transform: translateY(-0.2em);
+  font-size: 2.6em;
+}
+
+.raise-on-hover:hover::before {
+  content: url("../Assets/images/pngs/PointerLeft.png");
+}
+
+.raise-on-hover:hover::after {
+  content: url("../Assets/images/pngs/PointerRight.png");
+}
+/*# sourceMappingURL=menuStyle.css.map */
