--- a/css/menuStyle.sass
+++ b/css/menuStyle.sass
@@ -17,7 +17,8 @@
     margin: 0
     user-select: none
 
-body
+html
+    height: 100%
     cursor: url("../Assets/images/pngs/Cursor.png"), auto
 
 ul
@@ -40,7 +41,9 @@ li
 .title-image
     display: block
     margin: auto
-    width: 50%
+    width: 50%  
+
+    padding-top: 1em
 
 .raise-on-hover
     transition: all .75s ease
