--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -72,4 +72,39 @@ li {
 .raise-on-hover:hover::after {
   content: url("../Assets/images/pngs/PointerRight.png");
 }
+
+.help-container {
+  display: none;
+  position: fixed;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+}
+
+.prev {
+  z-index: 999;
+  content: url("../Assets/images/pngs/PointerLeft.png");
+}
+
+.next {
+  z-index: 999;
+  content: url("../Assets/images/pngs/PointerRight.png");
+}
+
+.help-body {
+  width: 780px;
+  height: 840px;
+  color: #fff;
+  background-color: #000;
+  -webkit-box-shadow: 0 0 10px 30px #000;
+          box-shadow: 0 0 10px 30px #000;
+}
 /*# sourceMappingURL=menuStyle.css.map */
