--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -100,11 +100,7 @@ li {
 }
 
 .help-body {
-  width: 780px;
-  height: 840px;
-  color: #fff;
-  background-color: #000;
-  -webkit-box-shadow: 0 0 10px 30px #000;
-          box-shadow: 0 0 10px 30px #000;
+  content: url("../Assets/images/pngs/HelpMenu.png");
+  background-color: rgba(255, 255, 255, 0);
 }
 /*# sourceMappingURL=menuStyle.css.map */
