--- a/css/menuStyle.sass
+++ b/css/menuStyle.sass
@@ -77,8 +77,5 @@ li
     content: url("../Assets/images/pngs/PointerRight.png")
 
 .help-body
-    width: 780px
-    height: 840px
-    color: #fff
-    background-color: #000
-    box-shadow: 0 0 10px 30px #000
+    content: url("../Assets/images/pngs/HelpMenu.png")
+    background-color: rgba(255, 255, 255, 0.0)
