Update font for game.html
Resolves: Invalid function names

--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -12,7 +12,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'antiqua';
+  src: url(../Assets/fonts/Antiqua.woff) format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
-  font-family: 'trajan-pro';
+  font-family: 'antiqua';
 }
 /*# sourceMappingURL=gameStyle.css.map */
