--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -10,6 +10,11 @@
     font-weight: normal
     font-style: normal 
 
-*
-    font-family: 'trajan-pro'
+@font-face 
+    font-family: 'antiqua'    
+    src: url(../Assets/fonts/Antiqua.woff) format('woff')
+    font-weight: normal
+    font-style: normal
 
+*
+    font-family: 'antiqua'
