Add Attack Calculation
Resolves: None

--- a/css/menuStyle.sass
+++ b/css/menuStyle.sass
@@ -17,6 +17,9 @@
     margin: 0
     user-select: none
 
+::-webkit-scrollbar
+    display: none
+
 html
     height: 100%
     cursor: url("../Assets/images/pngs/Cursor.png"), auto
