Update gameStyle Simplify API call
Resolves: None

--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -23,6 +23,10 @@
           user-select: none;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 html {
   height: 100%;
   cursor: url("../Assets/images/pngs/Cursor.png"), auto;
