--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -21,5 +21,12 @@
 
 * {
   font-family: 'antiqua';
+  background: #000;
+  color: #fff;
+  font-weight: bold;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 /*# sourceMappingURL=gameStyle.css.map */
