--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -18,7 +18,39 @@
 
 *
     font-family: 'antiqua'
+
     background: #000
     color: #fff
     font-weight: bold
+
+    padding: 0
+    margin: 0
+
     user-select: none
+
+ul
+    text-align: center
+    width: 100%
+
+    display: table
+
+    margin: 0 auto
+    padding-top: 5em
+
+li 
+    font-family: 'trajan-pro-bold'
+    font-size: 2em
+    color: #fff
+    background: none
+
+    display: inline-table
+    list-style-type: none
+
+    padding: 1em 2em 0 2em
+    margin: auto
+    width: fit-content
+
+    transition: all .75s ease    
+
+#textInput
+    font-size: 1.9em
