--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -28,29 +28,45 @@
 
     user-select: none
 
+*:focus
+    outline: none
+
+html
+    // cursor: none
+
 ul
-    text-align: center
-    width: 100%
+    list-style-type: none
+    display: flex
+    justify-content: center
 
-    display: table
-
-    margin: 0 auto
     padding-top: 5em
 
 li 
     font-family: 'trajan-pro-bold'
     font-size: 2em
+    text-align: center
     color: #fff
     background: none
 
     display: inline-table
     list-style-type: none
 
-    padding: 1em 2em 0 2em
-    margin: auto
-    width: fit-content
+    // padding: 1em 2em 0 2em
+    margin: 0 1em
+    height: 50px
+
+    width: 320px
 
     transition: all .75s ease    
 
 #textInput
+    position: absolute
+
+    text-align: center
     font-size: 1.9em
+
+    width: 100%
+    padding-top: 7em
+    margin: 0 auto
+
+    border: none
