Update typing animation
Resolves: None

--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -32,7 +32,7 @@
     outline: none
 
 html
-    // cursor: none
+    cursor: none
 
 ul
     list-style-type: none
@@ -45,19 +45,20 @@ li
     font-family: 'trajan-pro-bold'
     font-size: 2em
     text-align: center
-    color: #fff
     background: none
 
     display: inline-table
     list-style-type: none
 
-    // padding: 1em 2em 0 2em
     margin: 0 1em
     height: 50px
 
     width: 320px
 
     transition: all .75s ease    
+
+span
+    color: #888
 
 #textInput
     position: absolute
@@ -66,7 +67,7 @@ li
     font-size: 1.9em
 
     width: 100%
-    padding-top: 7em
+    padding-top: 3em
     margin: 0 auto
 
     border: none
