--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -15,6 +15,7 @@
 * {
   font-family: 'trajan-pro';
   background: #000;
+  color: #fff;
   padding: 0;
   margin: 0;
   -webkit-user-select: none;
@@ -88,7 +89,7 @@ li {
           align-items: center;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100%;
 }
@@ -103,8 +104,59 @@ li {
   content: url("../Assets/images/pngs/PointerRight.png");
 }
 
+.help-button {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  font-size: 1.5em;
+  text-align: center;
+}
+
 .help-body {
-  content: url("../Assets/images/pngs/HelpMenu.png");
   background-color: rgba(255, 255, 255, 0);
+  -webkit-animation: zoom 0.5s;
+          animation: zoom 0.5s;
+}
+
+.game-saveMenu {
+  display: none;
+  position: fixed;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  height: 100%;
+}
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes zoom {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 /*# sourceMappingURL=menuStyle.css.map */
