--- a/css/menuStyle.sass
+++ b/css/menuStyle.sass
@@ -13,6 +13,7 @@
 *
     font-family: 'trajan-pro'
     background: #000
+    color: #fff
     padding: 0
     margin: 0
     user-select: none
@@ -69,7 +70,7 @@ li
     top: 0
     left: 0
 
-    background-color: rgba(0, 0, 0, 0.7)
+    background-color: rgba(0, 0, 0, 0.8)
 
     width: 100%
     height: 100%
@@ -82,6 +83,41 @@ li
     z-index: 999
     content: url("../Assets/images/pngs/PointerRight.png")
 
+.help-button 
+    position: fixed
+    right: 10px
+    bottom: 10px
+
+    width: 30px
+    height: 30px
+
+    border: 2px solid #fff
+    border-radius: 50%
+
+    font-size: 1.5em
+    text-align: center
+
 .help-body
-    content: url("../Assets/images/pngs/HelpMenu.png")
     background-color: rgba(255, 255, 255, 0.0)
+
+    animation: zoom 0.5s
+
+.game-saveMenu 
+    display: none
+
+    position: fixed
+    justify-content: center
+    align-items: center
+    top: 0
+    left: 0
+
+    background-color: rgba(0, 0, 0, 0.9)
+
+    width: 100%
+    height: 100%
+
+@keyframes zoom
+    from
+        transform: scale(0)
+    to
+        transform: scale(1)
