--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'trajan-pro';
-  src: url(../Assets/fonts/Trajan-Pro-Regular.woff) format("woff");
+  src: url(/Assets/fonts/Trajan-Pro-Regular.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'trajan-pro-bold';
-  src: url(../Assets/fonts/Trajan-Pro-Bold.woff) format("woff");
+  src: url(/Assets/fonts/Trajan-Pro-Bold.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'antiqua';
-  src: url(../Assets/fonts/Antiqua.woff) format("woff");
+  src: url(/Assets/fonts/Antiqua.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -77,5 +77,23 @@ span {
   padding-top: 3em;
   margin: 0 auto;
   border: none;
+}
+
+#swal-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0);
+  cursor: url("/Assets/images/pngs/Cursor.png"), auto;
 }
 /*# sourceMappingURL=gameStyle.css.map */
