--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -1,18 +1,18 @@
 @font-face 
     font-family: 'trajan-pro'
-    src: url(../Assets/fonts/Trajan-Pro-Regular.woff) format('woff')
+    src: url(/Assets/fonts/Trajan-Pro-Regular.woff) format('woff')
     font-weight: normal
     font-style: normal
 
 @font-face 
     font-family: 'trajan-pro-bold'
-    src: url(../Assets/fonts/Trajan-Pro-Bold.woff) format('woff')
+    src: url(/Assets/fonts/Trajan-Pro-Bold.woff) format('woff')
     font-weight: normal
     font-style: normal 
 
 @font-face 
     font-family: 'antiqua'    
-    src: url(../Assets/fonts/Antiqua.woff) format('woff')
+    src: url(/Assets/fonts/Antiqua.woff) format('woff')
     font-weight: normal
     font-style: normal
 
@@ -71,3 +71,21 @@ span
     margin: 0 auto
 
     border: none
+
+#swal-container 
+    position: absolute
+    top: 0
+    left: 0
+
+    display: none
+    justify-content: center
+    align-items: center
+
+    height: 100%
+    width: 100%
+
+    text-align: center
+
+    background-color: rgba(255, 255, 255, 0.0)
+
+    cursor: url("/Assets/images/pngs/Cursor.png"), auto
