--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -24,13 +24,17 @@
           user-select: none;
 }
 
+*:focus {
+  outline: none;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
 
 html {
   height: 100%;
-  cursor: url("../Assets/images/pngs/Cursor.png"), auto;
+  cursor: url("/Assets/images/pngs/Cursor.png"), auto;
 }
 
 ul {
@@ -50,6 +54,10 @@ li {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+}
+
+span {
+  color: #888;
 }
 
 .title-image {
@@ -78,22 +86,6 @@ li {
   content: url("../Assets/images/pngs/PointerRight.png");
 }
 
-.help-container {
-  display: none;
-  position: fixed;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  width: 100%;
-  height: 100%;
-}
-
 .prev {
   z-index: 999;
   content: url("../Assets/images/pngs/PointerLeft.png");
@@ -114,12 +106,7 @@ li {
   border-radius: 50%;
   font-size: 1.5em;
   text-align: center;
-}
-
-.help-body {
-  background-color: rgba(255, 255, 255, 0);
-  -webkit-animation: zoom 0.5s;
-          animation: zoom 0.5s;
+  cursor: url("/Assets/images/pngs/Cursor.png"), auto;
 }
 
 .game-saveMenu {
@@ -136,6 +123,23 @@ li {
   background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 100%;
+}
+
+#swal-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 @-webkit-keyframes zoom {
