Fix pathing [hopefully]

--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -1,18 +1,18 @@
 @font-face 
     font-family: 'trajan-pro'
-    src: url(/Assets/fonts/Trajan-Pro-Regular.woff) format('woff')
+    src: url(../Assets/fonts/Trajan-Pro-Regular.woff) format('woff')
     font-weight: normal
     font-style: normal
 
 @font-face 
     font-family: 'trajan-pro-bold'
-    src: url(/Assets/fonts/Trajan-Pro-Bold.woff) format('woff')
+    src: url(../Assets/fonts/Trajan-Pro-Bold.woff) format('woff')
     font-weight: normal
     font-style: normal 
 
 @font-face 
     font-family: 'antiqua'    
-    src: url(/Assets/fonts/Antiqua.woff) format('woff')
+    src: url(../Assets/fonts/Antiqua.woff) format('woff')
     font-weight: normal
     font-style: normal
 
@@ -88,4 +88,4 @@ span
 
     background-color: rgba(255, 255, 255, 0.0)
 
-    cursor: url("/Assets/images/pngs/Cursor.png"), auto
+    cursor: url("../Assets/images/pngs/Cursor.png"), auto
