--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'trajan-pro';
-  src: url(/Assets/fonts/Trajan-Pro-Regular.woff) format("woff");
+  src: url(../Assets/fonts/Trajan-Pro-Regular.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'trajan-pro-bold';
-  src: url(/Assets/fonts/Trajan-Pro-Bold.woff) format("woff");
+  src: url(../Assets/fonts/Trajan-Pro-Bold.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'antiqua';
-  src: url(/Assets/fonts/Antiqua.woff) format("woff");
+  src: url(../Assets/fonts/Antiqua.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -94,6 +94,6 @@ span {
   width: 100%;
   text-align: center;
   background-color: rgba(255, 255, 255, 0);
-  cursor: url("/Assets/images/pngs/Cursor.png"), auto;
+  cursor: url("../Assets/images/pngs/Cursor.png"), auto;
 }
 /*# sourceMappingURL=gameStyle.css.map */
