--- a/css/menuStyle.sass
+++ b/css/menuStyle.sass
@@ -26,7 +26,7 @@
 
 html
     height: 100%
-    cursor: url("/Assets/images/pngs/Cursor.png"), auto
+    cursor: url("../Assets/images/pngs/Cursor.png"), auto
 
 ul
     width: 100%
@@ -89,7 +89,7 @@ span
     font-size: 1.5em
     text-align: center
 
-    cursor: url("/Assets/images/pngs/Cursor.png"), auto
+    cursor: url("../Assets/images/pngs/Cursor.png"), auto
 
 .game-saveMenu 
     display: none
