--- a/css/menuStyle.sass
+++ b/css/menuStyle.sass
@@ -75,7 +75,7 @@ span
     z-index: 999
     content: url("../Assets/images/pngs/PointerRight.png")
 
-.help-button 
+#Help
     position: fixed
     right: 10px
     bottom: 10px
@@ -89,7 +89,7 @@ span
     font-size: 1.5em
     text-align: center
 
-    cursor: url("../Assets/images/pngs/Cursor.png"), auto
+    cursor: url("../Assets/images/pngs/Cursor.png")
 
 .game-saveMenu 
     display: none
