--- a/css/menuStyle.sass
+++ b/css/menuStyle.sass
@@ -105,6 +105,21 @@ span
     width: 100%
     height: 100%
 
+.l-user
+    display: flex
+    width: 80%
+    justify-content: space-between
+    margin: 1.4% auto
+    background-color: rgba(0, 0, 0, 0.0)
+
+.l-header
+    margin-top: 1.5em
+
+.user-data
+    display: flex
+    flex-basis: 65%
+    justify-content: space-between
+
 #swal-container 
     position: absolute
     top: 0
@@ -126,3 +141,14 @@ span
         transform: scale(0)
     to
         transform: scale(1)
+
+@media only screen and (max-width: 800px) // Width subject to change
+    li
+        font-size: 1.65em
+
+    .title-image
+        width: 80%
+
+    .raise-on-hover
+        &:hover
+            font-size: 1.8em
