--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -34,16 +34,20 @@
 html
     cursor: none
 
+img
+    background: transparent
+
 ul
     list-style-type: none
     display: flex
     justify-content: center
 
-    padding-top: 4em
+    padding-top: 1.5em
+    height: 50px
 
 li 
     font-family: 'trajan-pro-bold'
-    font-size: 2em
+    font-size: clamp(16px, calc(16px + (32 - 16) * ((100vw - 320px) / (1800 - 320))), 32px)
     text-align: center
     background: none
 
@@ -51,7 +55,6 @@ li
     list-style-type: none
 
     margin: 0 1em
-    height: 50px
 
     width: 320px
 
@@ -60,20 +63,64 @@ li
 span
     color: #888
 
+.bossContainer
+    display: flex
+    justify-content: center
+
+.bossFrame
+    width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
+
+.typingBox
+    display: flex
+    justify-content: center
+
+.decorator
+    display: flex
+    background: transparent
+
+    &.left
+        position: relative
+        transform: translateX(41.5%)
+
+    &.right
+        position: relative
+        transform: translateX(-41.5%)
+
+.globe
+    background: transparent
+    width: clamp(36px, calc(36px + (210 - 36) * ((100vw - 320px) / (1800 - 320))), 210px)
+
+    &.health
+        transform: translateX(25%)
+
+    &.mana
+        transform: translateX(-25%)
+
+.input-frame
+    background: transparent
+    height: fit-content
+    width: clamp(108px, calc(108px + (634 - 108) * ((100vw - 320px) / (1800 - 320))), 634px)
+
+    &.left
+        transform: translateY(14%)
+
+    &.right
+        transform: translateY(86%)
+
 #textInput
-    position: absolute
-
+    z-index: 999
     text-align: center
-    font-size: 1.9em
+    font-size: clamp(16px, calc(16px + (32 - 16) * ((100vw - 320px) / (1800 - 320))), 32px)
 
-    width: 100%
-    padding-top: 3em
-    margin: 0 auto
+    width: 270px
+    margin: auto 0
 
     border: none
+    background: none
 
 #swal-container 
     position: absolute
+    z-index: 1000
     top: 0
     left: 0
 
@@ -86,6 +133,6 @@ span
 
     text-align: center
 
-    background-color: rgba(255, 255, 255, 0.0)
+    background-color: rgba(0, 0, 0, 0.7)
 
     cursor: url("../Assets/images/pngs/Cursor.png"), auto
