--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -136,3 +136,7 @@ span
     background-color: rgba(0, 0, 0, 0.7)
 
     cursor: url("../Assets/images/pngs/Cursor.png"), auto
+
+@media only screen and (max-width: 800px) // Width subject to change
+    .input-frame
+        display: none
