--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -32,7 +32,7 @@
   display: none;
 }
 
-html {
+html, body {
   height: 100%;
   cursor: url("../Assets/images/pngs/Cursor.png"), auto;
 }
@@ -65,6 +65,23 @@ span {
   margin: auto;
   width: 50%;
   padding-top: 1em;
+}
+
+.splash {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-75%);
+          transform: translateY(-75%);
+}
+
+.splash-content {
+  width: 100%;
+  text-align: center;
+  font-size: clamp(18px, calc(18px + (36 - 18) * ((100vw - 320px) / (1800 - 320))), 36px);
+  position: absolute;
+  bottom: 10px;
+  -webkit-animation: glow 8000ms infinite;
+          animation: glow 8000ms infinite;
 }
 
 .raise-on-hover {
@@ -169,25 +186,27 @@ span {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-@-webkit-keyframes zoom {
-  from {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+@-webkit-keyframes glow {
+  0% {
+    text-shadow: 0 0 10px #fff, 0 0 0px #fff;
   }
-  to {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+  50% {
+    text-shadow: 0 0 10px #fff, 0 0 50px #fff, 0 0 20px #fff;
+  }
+  100% {
+    text-shadow: 0 0 10px #fff, 0 0 0px #fff;
   }
 }
 
-@keyframes zoom {
-  from {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 10px #fff, 0 0 0px #fff;
   }
-  to {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+  50% {
+    text-shadow: 0 0 10px #fff, 0 0 50px #fff, 0 0 20px #fff;
+  }
+  100% {
+    text-shadow: 0 0 10px #fff, 0 0 0px #fff;
   }
 }
 
