--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -32,7 +32,7 @@
     outline: none
 
 html
-    cursor: none
+    // cursor: none
 
 img
     background: transparent
@@ -64,10 +64,17 @@ span
     color: #888
 
 .bossContainer
-    display: flex
-    justify-content: center
+    position: relative  
+    width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
+    margin: auto
+
+.bossAnim
+    margin: auto
 
 .bossFrame
+    position: absolute
+    top: 0
+    left: 0
     width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
 
 .typingBox
