--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -64,18 +64,28 @@ span
     color: #888
 
 .bossContainer
-    position: relative  
+    position: relative
     width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
     margin: auto
 
-.bossAnim
+.bossFrame
+    position: relative
     margin: auto
 
-.bossFrame
+.bossAnim
     position: absolute
     top: 0
     left: 0
     width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
+
+    &.attack
+        display: none
+
+    &.damage
+        display: none
+    
+    &.death
+        display: none
 
 .typingBox
     display: flex
