--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -11,13 +11,13 @@
     font-style: normal 
 
 @font-face 
-    font-family: 'antiqua'    
-    src: url(../Assets/fonts/Antiqua.woff) format('woff')
+    font-family: 'amethysta'    
+    src: url(../Assets/fonts/Amethysta.woff) format('woff')
     font-weight: normal
     font-style: normal
 
 *
-    font-family: 'antiqua'
+    font-family: 'amethysta'
 
     background: #000
     color: #fff
@@ -31,8 +31,11 @@
 *:focus
     outline: none
 
-html
-    // cursor: none
+html, body
+    margin: 0
+    height: 100%
+    overflow: hidden
+    cursor: url("../Assets/images/pngs/Cursor.png"), auto
 
 img
     background: transparent
@@ -42,8 +45,8 @@ ul
     display: flex
     justify-content: center
 
-    padding-top: 1.5em
-    height: 50px
+    // padding-top: 1.5em
+    height: 36px
 
 li 
     font-family: 'trajan-pro-bold'
@@ -66,17 +69,21 @@ span
 .bossContainer
     position: relative
     width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
+    aspect-ratio: 973 / 673
     margin: auto
 
 .bossFrame
     position: relative
     margin: auto
+    width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
+    aspect-ratio: 973 / 673
 
 .bossAnim
     position: absolute
     top: 0
     left: 0
     width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
+    aspect-ratio: 973 / 673
 
     &.attack
         display: none
@@ -87,7 +94,10 @@ span
     &.death
         display: none
 
+.wordContainer
+
 .typingBox
+    height: auto
     display: flex
     justify-content: center
 
@@ -112,6 +122,38 @@ span
 
     &.mana
         transform: translateX(-25%)
+
+.fill
+    position: absolute  
+    width: clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px)
+    aspect-ratio: 1
+    border-radius: 50%
+
+    &.health
+        background-color: #780909
+        transform: translate(63%, 25%)
+
+        .cover
+            position: absolute
+            content: ''
+            display: inline-block
+            background-color: #000
+            width: clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px)
+            height: calc(clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px) * 0)
+
+
+    &.mana
+        right: 0
+        background-color: #0d2f65
+        transform: translate(-63%, 25%) 
+
+        .cover
+            position: absolute
+            content: ''
+            display: inline-block
+            background-color: #000
+            width: clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px)
+            height: calc(clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px) * 0)
 
 .input-frame
     background: transparent
