--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -28,12 +28,10 @@
   outline: none;
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
-
 html, body {
+  margin: 0;
   height: 100%;
+  overflow: hidden;
   cursor: url("../Assets/images/pngs/Cursor.png"), auto;
 }
 
@@ -74,18 +72,17 @@ span {
           transform: translateY(-75%);
 }
 
-#splash-credits {
+.splash-text {
   width: 100%;
   text-align: center;
-  margin-top: 10px;
+  margin-bottom: 10px;
   font-size: clamp(18px, calc(18px + (36 - 18) * ((100vw - 320px) / (1800 - 320))), 36px);
-  position: absolute;
 }
 
 .splash-content {
   width: 100%;
   text-align: center;
-  font-size: clamp(18px, calc(18px + (36 - 18) * ((100vw - 320px) / (1800 - 320))), 36px);
+  font-size: clamp(6px, calc(6px + (12 - 6) * ((100vw - 320px) / (1800 - 320))), 12px);
   position: absolute;
   bottom: 10px;
   -webkit-animation: glow 8000ms infinite;
@@ -101,24 +98,6 @@ span {
   -webkit-transform: translateY(-0.2em);
           transform: translateY(-0.2em);
   font-size: clamp(18px, calc(18px + (41.6 - 18) * ((100vw - 320px) / (1800 - 320))), 41.6px);
-}
-
-.raise-on-hover:hover::before {
-  content: url("../Assets/images/pngs/PointerLeft.png");
-}
-
-.raise-on-hover:hover::after {
-  content: url("../Assets/images/pngs/PointerRight.png");
-}
-
-.prev {
-  z-index: 999;
-  content: url("../Assets/images/pngs/PointerLeft.png");
-}
-
-.next {
-  z-index: 999;
-  content: url("../Assets/images/pngs/PointerRight.png");
 }
 
 #Help {
