--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -21,7 +21,7 @@
 
 * {
   font-family: 'amethysta';
-  background: #000;
+  background: rgba(255, 255, 255, 0);
   color: #fff;
   font-weight: bold;
   padding: 0;
@@ -39,8 +39,9 @@
 html, body {
   margin: 0;
   height: 100%;
+  background: url(../Assets/images/pngs/background1.png) no-repeat;
   overflow: hidden;
-  cursor: url("../Assets/images/pngs/Cursor.png"), auto;
+  cursor: url(../Assets/images/pngs/Cursor.png), auto;
 }
 
 img {
@@ -77,36 +78,20 @@ span {
 
 .bossContainer {
   position: relative;
+  background: transparent;
   width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px);
   aspect-ratio: 973 / 673;
   margin: auto;
-}
-
-.bossFrame {
-  position: relative;
-  margin: auto;
-  width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px);
-  aspect-ratio: 973 / 673;
 }
 
 .bossAnim {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px);
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: clamp(166px, calc(166px + (613 - 166) * ((100vw - 320px) / (1800 - 320))), 613px);
   aspect-ratio: 973 / 673;
-}
-
-.bossAnim.attack {
-  display: none;
-}
-
-.bossAnim.damage {
-  display: none;
-}
-
-.bossAnim.death {
-  display: none;
 }
 
 .typingBox {
@@ -161,7 +146,8 @@ span {
 }
 
 .fill.health {
-  background-color: #780909;
+  background: -webkit-gradient(linear, left bottom, left top, from(#4d0c21), to(#991022));
+  background: linear-gradient(0deg, #4d0c21 0%, #991022 100%);
   -webkit-transform: translate(63%, 25%);
           transform: translate(63%, 25%);
 }
@@ -177,7 +163,8 @@ span {
 
 .fill.mana {
   right: 0;
-  background-color: #0d2f65;
+  background: -webkit-gradient(linear, left bottom, left top, from(#1b0346), to(#12599c));
+  background: linear-gradient(0deg, #1b0346 0%, #12599c 100%);
   -webkit-transform: translate(-63%, 25%);
           transform: translate(-63%, 25%);
 }
