--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -34,7 +34,7 @@
 html, body
     margin: 0
     height: 100%
-    background: url(../Assets/images/pngs/background1.png) no-repeat
+    background: url(../Assets/images/pngs/background1.png) no-repeat center
     overflow: hidden
     cursor: url(../Assets/images/pngs/Cursor.png), auto
 
@@ -82,6 +82,13 @@ span
     width: clamp(166px, calc(166px + (613 - 166) * ((100vw - 320px) / (1800 - 320))), 613px)
     aspect-ratio: 973 / 673
 
+    &.Damage
+        display: none
+    &.Attack
+        display: none
+    &.Death
+        display: none
+
 .wordContainer
 
 .typingBox
@@ -116,6 +123,7 @@ span
     width: clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px)
     aspect-ratio: 1
     border-radius: 50%
+    overflow: hidden
 
     &.health
         background: linear-gradient(0deg, rgb(77,12,33) 0%, rgb(153,16,34) 100%)
@@ -125,7 +133,7 @@ span
             position: absolute
             content: ''
             display: inline-block
-            background-color: #000
+            background-color: rgba(0, 0, 0, 0.7)
             width: clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px)
             height: calc(clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px) * 0)
 
@@ -139,7 +147,7 @@ span
             position: absolute
             content: ''
             display: inline-block
-            background-color: #000
+            background-color: rgba(0, 0, 0, 0.7)
             width: clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px)
             height: calc(clamp(24px, calc(24px + (140 - 24) * ((100vw - 320px) / (1800 - 320))), 140px) * 0)
 
