--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -40,6 +40,7 @@ html, body {
   margin: 0;
   height: 100%;
   background: url(../Assets/images/pngs/background1.png) no-repeat center;
+  background-size: cover;
   overflow: hidden;
   cursor: url(../Assets/images/pngs/Cursor.png), auto;
 }
