--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -14,7 +14,6 @@
 
 * {
   font-family: 'trajan-pro';
-  background: #000;
   color: #fff;
   padding: 0;
   margin: 0;
@@ -124,7 +123,6 @@ span {
           align-items: center;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 100%;
 }
@@ -188,6 +186,11 @@ lottie-player{
   margin: auto;
   width: 100%;
   padding-top: 3em;
+}
+
+body {
+  background: url(../Assets/images/pngs/background2.png) no-repeat center;
+  background-size: cover;
 }
 
 @-webkit-keyframes glow {
