Add Display of boss title to differentiate bosses with same sprite
Resolves: Difficulty timing not working

--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -74,6 +74,14 @@ span
     aspect-ratio: 973 / 673
     margin: auto
 
+.bossTitle
+    text-align: center
+    font-size: clamp(18px, calc(18px + (56 - 18) * ((100vw - 320px) / (1800 - 320))), 56px)
+    padding-top: 1em
+    position: relative
+    top: -2.3em
+    transition: all 1s ease-in-out
+
 .bossAnim
     position: absolute
     bottom: 0
