Refactor: - Remove redundant filter function
Resolves: CSS overriding

--- a/css/gameStyle.sass
+++ b/css/gameStyle.sass
@@ -35,6 +35,7 @@ html, body
     margin: 0
     height: 100%
     background: url(../Assets/images/pngs/background1.png) no-repeat center
+    background-size: cover
     overflow: hidden
     cursor: url(../Assets/images/pngs/Cursor.png), auto
 
@@ -73,6 +74,14 @@ span
     width: clamp(166px, calc(166px + (973 - 166) * ((100vw - 320px) / (1800 - 320))), 973px)
     aspect-ratio: 973 / 673
     margin: auto
+
+.bossTitle
+    text-align: center
+    font-size: clamp(18px, calc(18px + (56 - 18) * ((100vw - 320px) / (1800 - 320))), 56px)
+    padding-top: 1em
+    position: relative
+    top: -2.3em
+    transition: all 1s ease-in-out
 
 .bossAnim
     position: absolute
