--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -85,6 +85,16 @@ span {
   margin: auto;
 }
 
+.bossTitle {
+  text-align: center;
+  font-size: clamp(18px, calc(18px + (56 - 18) * ((100vw - 320px) / (1800 - 320))), 56px);
+  padding-top: 1em;
+  position: relative;
+  top: -2.3em;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+
 .bossAnim {
   position: absolute;
   bottom: 0;
